# Py4GW_Reforged_Native

./: .gitignore  BUILD-MINGW.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  mingw-toolchain.cmake
data/: Py4GW_Accounts.db  Py4GW_Internals.db  Py4GW_Settings.db
docs/: 01-repository-overview.md  02-build-and-dependencies.md  03-runtime-lifecycle.md  04-gw-hooking-and-render-path.md  05-scanner-and-file-scanner.md  06-pattern-json-system.md  07-python-runtime.md  08-imgui-and-input-layer.md  09-logging-and-process-services.md  10-current-observations-and-risks.md  11-error-handling-and-panic.md  12-project-style-guide.md  README.md  callback-crash-isolation-plan.md  gwca-manager-dependency-map.md  imgui-ini-persistence.md  legacy-migration-checklist.md  legacy-migration-inventory.md  module-migration-guide.md  native-binding-coverage-audit.md  overlay-migration-notes.md  python-migration-layers-analysis.md  python-migration-progress.md  settings-ini-design.md  shared-memory-context-catalog.csv  shared-memory-context-catalog.md  shared-memory-handover.md  uimgr-migration-map.md  uimgr-migration-plan.md
docs/RE/: altitude_plane_reverse_engineering.md
include/: Py4GW.h  mingw_compat.h
include/GW/: GuildWars.h
include/GW/agent_recolor/: agent_recolor.h
include/GW/camera/: camera.h  camera_methods.h
include/GW/common/: game_pos.h  gw_array.h  gw_list.h  opcodes.h  stoc.h
include/GW/context/: account.h  agent.h  agent_context.h  attribute.h  camera.h  cinematic.h  context.h  friend_list.h  game_context.h  guild.h  guild_context.h  hero.h  item.h  item_context.h  map.h  map_context.h  match.h  npc.h  party.h  party_context.h  pathing.h  player.h  quest.h  skill.h  text_parser.h  title.h  world_context.h
include/GW/dialog/: dialog.h
include/GW/effects/: effects.h  effects_methods.h
include/GW/events/: events.h
include/GW/friend_list/: friend_list.h
include/GW/game_thread/: game_thread.h  game_thread_methods.h
include/GW/guild/: guild.h
include/GW/gw_dat_reader/: arenanet_texture.h  gw_dat_reader.h
include/GW/item/: item.h
include/GW/map/: map.h
include/GW/name_obfuscator/: name_obfuscator.h
include/GW/native_ui/: native_ui.h
include/GW/packet_sniffer/: packet_sniffer.h
include/GW/pathing/: pathing.h
include/GW/ping/: ping.h
include/GW/player/: player.h
include/GW/quest/: quest.h
include/GW/render/: render.h  render_methods.h
include/GW/shared_memory/: manager.h  segments.h
include/GW/stoc/: stoc.h
include/GW/textures/: arenanet_file_parser.h  arenanet_texture.h  gw_dat_reader.h  gw_dat_unpack.h  texture_manager.h
include/GW/ui/: ui.h
include/GW/world_render/: world_render.h
include/base/: CrashHandler.h  bind_helpers.h  error_handling.h  file_scanner.h  hook_types.h  hooker.h  imvec_caster.h  logger.h  memory_manager.h  memory_patcher.h  panic.h  patterns.h  process_manager.h  python_runtime.h  scanner.h  timer.h
include/callback/: callback.h
include/imgui/: bindings.h  compact_ui.h  console_host_ui.h  console_ui.h  demo_ui.h  font_manager.h  imgui_manager.h  test_ui.h
include/imgui/addons/: filebrowser_demo.h  hotkey_demo.h  imanim_demo.h  imgui_club_demo.h  markdown_demo.h
include/imgui/ext/: ext.h
include/listeners/: agent_events_listener.h  listeners.h
include/overlay/: dx_overlay.h  overlay.h  particle_system.h  screen_overlay.h
include/profiler/: profiler.h
include/settings/: settings.h
include/system/: system.h
include/virtual_input/: virtual_input.h
mingw-shims/: DbgHelp.h  DirectXMath.h  DirectXPackedVector.h  Psapi.h  ShellApi.h  WinUser.h
offsets/: camera.json  context.json  effects.json  game_thread.json  gw_dat_reader.json  memory.json  render.json  ui.json
scripts/: PyImGui.pyi  audit_imgui_bindings.py  gen_pyimgui_stubs.py  imgui_demo.py  imgui_redesign_smoke.py  pyimgui.py  texture_test.py
src/: Py4GW.cpp  dllmain.cpp
src/GW/: GuildWars.cpp
src/GW/agent/: agent.cpp  agent_bindings.cpp  agent_methods.cpp  agent_shared_memory.cpp
src/GW/agent_recolor/: agent_recolor.cpp  agent_recolor_bindings.cpp  agent_recolor_patterns.cpp
src/GW/camera/: camera.cpp  camera_bindings.cpp  camera_methods.cpp  camera_shared_memory.cpp
src/GW/chat/: chat_bindings.cpp
src/GW/context/: agent.cpp  context.cpp  context_methods.cpp  context_shared_memory.cpp  item.cpp  party.cpp  skill.cpp
src/GW/dialog/: dialog.cpp  dialog_bindings.cpp  dialog_patterns.cpp
src/GW/effects/: effects.cpp  effects_bindings.cpp  effects_methods.cpp
src/GW/events/: events.cpp  events_methods.cpp
src/GW/friend_list/: friend_list.cpp  friend_list_bindings.cpp  friend_list_methods.cpp  friend_list_shared_memory.cpp
src/GW/game_thread/: game_thread.cpp  game_thread_bindings.cpp  game_thread_methods.cpp
src/GW/guild/: guild.cpp  guild_bindings.cpp  guild_methods.cpp  guild_shared_memory.cpp
src/GW/gw_dat_reader/: arenanet_texture.cpp  gw_dat_reader_patterns.cpp
src/GW/item/: inventory_bindings.cpp  item.cpp  item_bindings.cpp  item_methods.cpp  item_patterns.cpp  item_shared_memory.cpp
src/GW/map/: map.cpp  map_bindings.cpp  map_methods.cpp  (+2 more)
src/base/: CrashHandler.cpp  file_scanner.cpp  hooker.cpp  logger.cpp  memory_manager.cpp  memory_patcher.cpp  panic.cpp  patterns.cpp  process_manager.cpp  python_runtime.cpp  scanner.cpp
src/callback/: callback.cpp  callback_bindings.cpp
src/imgui/: compact_ui.cpp  console_host_ui.cpp  console_ui.cpp  demo_ui.cpp  font_manager.cpp  imgui_bindings.cpp  imgui_manager.cpp  test_ui.cpp
src/listeners/: agent_events_bindings.cpp  agent_events_listener.cpp  listeners.cpp  listeners_bindings.cpp
src/overlay/: dx_overlay.cpp  dx_overlay_bindings.cpp  overlay.cpp  overlay_bindings.cpp  overlay_patterns.cpp  particle_system.cpp  particle_system_bindings.cpp  screen_overlay.cpp
src/profiler/: profiler.cpp  profiler_bindings.cpp
src/settings/: settings.cpp  settings_bindings.cpp  settings_methods.cpp
src/system/: system.cpp  system_bindings.cpp  system_methods.cpp
src/virtual_input/: virtual_input_bindings.cpp  virtual_input_methods.cpp
(+70 files in other folders)
